--- a/game_list.html
+++ b/game_list.html
@@ -529,7 +529,7 @@
         // 页面丝滑跳转逻辑<script>
         // 登录状态拦截
         function checkAuth() {
-            if (sessionStorage.getItem('isAdminLoggedIn') !== 'true') {
+            if (localStorage.getItem('isAdminLoggedIn') !== 'true') {
                 window.location.href = 'admin_auth.html';
             }
         }
