--- a/settings.html
+++ b/settings.html
@@ -1025,10 +1025,25 @@
             handleLogout();
         }
 
-        function handleGlobalClear() {
-            if (confirm('警告：此操作将清空全站所有用户的历史记录，是否继续？')) {
-                localStorage.removeItem('userSubmissionHistory');
-                alert('清理成功');
+        async function handleGlobalClear() {
+            const username = localStorage.getItem('currentAdmin') || localStorage.getItem('lastAdminUser');
+            if (confirm('警告：此操作将清空您的所有历史记录，是否继续？')) {
+                try {
+                    // 1. 尝试清理云端
+                    if (username) {
+                        const res = await fetch(`/api/records?username=${username}`, {
+                            method: 'DELETE'
+                        });
+                        if (!res.ok) throw new Error("云端清理失败");
+                    }
+                    
+                    // 2. 清理本地
+                    localStorage.removeItem('userSubmissionHistory');
+                    alert('清理成功');
+                } catch (err) {
+                    console.error("清理失败:", err);
+                    alert("清理失败，请稍后重试");
+                }
             }
         }
 
